# project_template

./: main.cpp  run.sh
code/: CMakeLists.txt
code/include/: hello.hpp
code/source/: .hello.cpp.swp  hello.cpp
tests/: CMakeLists.txt  runtests.sh
